--- a/docs/lab/overview/testing-modalities.mdx
+++ b/docs/lab/overview/testing-modalities.mdx
@@ -46,7 +46,7 @@ The flow for at-home phlebotomy orders is as follows:
 
 - [Place an order](/lab/overview/quickstart) via the API.
 - The order is processed in the background. For at-home phlebotomy, this means generating the requisition form for the lab test.
-- Once the requisition form is ready, a webhook update and an email to the patient are sent. The email will them know that they can now book an appointment.
+- Once the requisition form is ready, a webhook update and an email to the patient are sent. The email will let them know they can now book an appointment.
 - The patient goes through Vital's appointment booking dashboard, where they can select a location and time from the available slots.
 - Once the appointment takes place and the sample is drawn, it will be taken to the lab.
 - Once the lab analyzes the results, the order is complete and the results can be [fetched](/lab/results/result-formats).
