--- a/docs/api-reference/user/create-insurance-beta.mdx
+++ b/docs/api-reference/user/create-insurance-beta.mdx
@@ -24,17 +24,18 @@ curl --request POST \
   "relationship": "Self",
   "insured": {
     "first_name": "John",
-    "last_name": "Doe", 
-    "email": "john@email.com", 
-    "phone_number":"+1123123123",
-    "gender": "Male", 
-    "dob": "1999-01-01", 
+    "last_name": "Doe",
+    "email": "john@email.com",
+    "phone_number": "+1123123123",
+    "gender": "Male",
+    "dob": "1999-01-01",
     "address": {
-      "first_line": "Some Street", 
+      "first_line": "Some Street",
       "second_line": null,
-      "zip_code": "85004",
+      "zip": "85004",
       "state": "AZ",
       "city": "Phoenix",
+      "country": "US"
     }
   }
 }
